--- a/helix/package.json
+++ b/helix/package.json
@@ -11,6 +11,7 @@
     "@graphql-tools/schema": "^7.1.5",
     "apollo-datasource-rest": "0.9.6",
     "apollo-server": "2.19.1",
+    "cors": "^2.8.5",
     "graphql": "15.4.0-experimental-stream-defer.1",
     "graphql-helix": "^1.4.1",
     "graphql-tag": "^2.12.4"
